# llm_trajectory

./: .gitignore  README.md  pyproject.toml  trajectory.json
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/mujoco/: scene.xml
frontend/src/: App.tsx  config.ts
frontend/src/components/: BottomSheet.tsx  ConfigDialog.tsx  ExecutionControls.tsx  PlanView.tsx  ScenePanel.tsx  StatusBar.tsx  TaskInput.tsx
frontend/src/core/: llmClient.ts  primitives.ts  prompt.ts  resolver.ts  scene.ts  transpiler.ts  types.ts
frontend/src/sim/: animator.ts  ikSolver.ts  mujocoLoader.ts  mujocoVisualizer.ts  sceneExtractor.ts  threeRenderer.ts
frontend/src/styles/: index.css
frontend/tests/: primitives.test.ts  prompt.test.ts  resolver.test.ts  scene.test.ts  transpiler.test.ts
scenes/: tabletop_fruit.yaml
src/llm_trajectory/: cli.py  pipeline.py
src/llm_trajectory/backends/: base.py  json_file.py
src/llm_trajectory/llm/: base.py  claude.py  mock.py  openai_backend.py
src/llm_trajectory/primitives/: handlers.py  registry.py
src/llm_trajectory/prompts/: builder.py
src/llm_trajectory/resolver/: resolver.py
src/llm_trajectory/scene/: loader.py  models.py
src/llm_trajectory/transpiler/: trajectory.py  transpiler.py
tests/: conftest.py  test_pipeline.py  test_primitives.py  test_resolver.py  test_scene.py  test_transpiler.py
