[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-trajectory"
version = "0.1.0"
description = "LLM-powered robot trajectory generation using movement primitives"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
pybullet = ["pybullet>=3.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
all = ["llm-trajectory[claude,openai,pybullet,dev]"]

[project.scripts]
llm-trajectory = "llm_trajectory.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_trajectory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
